@@ -23,8 +23,13 @@ bool randn_ok(void)
 	double N   = double( m * n );
 	double avg = sum / N;
 	double var = sumsq / N - avg * avg;
-	ok &= std::fabs(avg) < 2. / std::sqrt(N);
-	//  The variance of N independent chi-squares is 2 / N
-	ok &= std::fabs(var - 1.) < 2. * std::sqrt( 2. / N );
+
+	// The variance of N independent standard normals is N
+	// and variance of avg in 1/N.
+	ok &= std::fabs(avg) < 3. / std::sqrt(N);
+
+	//  The variance of N independent chi-squares is 2 * N
+	// and variance of sumsq is 2/N
+	ok &= std::fabs(var - 1.) < 3. * std::sqrt( 2. / N );
 	return ok;
 }
